MFC r335631:

Always initialize the ignore local variable.
PR:		229235